--- a/src/scss/layout/sections/consequences.scss
+++ b/src/scss/layout/sections/consequences.scss
@@ -7,8 +7,9 @@
   padding-top: 140px;
   padding-bottom: 100px;
   margin-bottom: 114px;
+
   &:before,
-  &:after{
+  &:after {
     position: absolute;
     content: '';
     background-repeat: no-repeat;
@@ -16,33 +17,60 @@
     background-size: contain;
     z-index: 1;
   }
-  &:before{
+
+  &:before {
     background-image: url(../assets/img/bg112-top.png);
-    width: 270px;
-    height: 164px;
-    right: 138px;
-    top: -150px;
+    width: 14%;
+    height: 20%;
+    right: 8%;
+    top: -15%;
 
   }
 
-  &:after{
+  &:after {
     background-image: url(../assets/img/bg112-bottom.png);
     width: 257px;
     height: 161px;
     bottom: -82px;
     left: 236px;
   }
+
   .section__heading {
     margin: 0 auto 80px;
     max-width: 895px;
     text-align: center;
   }
-  .wrap-btn{
-    text-align: center;
-  }
- }
 
-.consequences-list{
+  .wrap-btn {
+    text-align: center;
+    display: none;
+  }
+  @include respond-to($lg) {
+    background-position: 0 0;
+    background-size: cover;
+  }
+  @include respond-to($xs) {
+    padding-top: 64px;
+    padding-bottom: 37px;
+    background-position: center 0;
+    &:before,
+    &:after {
+      display: none;
+    }
+    .section__heading {
+      margin-bottom: 34px;
+      padding-bottom: 40px;
+    }
+  }
+  @include respond-to($xxs) {
+    .consequences-title {
+      font-size: 20px;
+    }
+
+  }
+}
+
+.consequences-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -52,7 +80,7 @@
   text-align: center;
   line-height: 1.2;
 
-  &__item{
+  &__item {
     position: relative;
     display: flex;
     justify-content: center;
@@ -66,41 +94,79 @@
     margin: 0 17px 50px;
 
     &:before,
-    &:after{
+    &:after {
       position: absolute;
       content: '';
       top: 50%;
-      transform: translateY( -50% );
+      transform: translateY(-50%);
     }
-    &:before{
+
+    &:before {
       right: -35px;
       //background-color: rgba(255,255,255,.5);
       width: 35px;
       height: 1px;
     }
-    &:after{
+
+    &:after {
       width: 12px;
       height: 25px;
       display: none;
       background-color: #ffffff;
     }
-    &:nth-child(3n+3):before{
+
+    &:nth-child(3n+3):before {
       display: none;
     }
-    &:nth-child(3n+3):after{
+
+    &:nth-child(3n+3):after {
       border-radius: 0 100% 100% 0 / 0 50% 50% 0;
       right: -12px;
       display: block;
     }
-    &:nth-child(1):after{
+
+    &:nth-child(1):after {
       left: -12px;
       border-radius: 100% 0 0 100% / 50% 0 0 50%;
       display: block;
     }
-    &:nth-child(4):after{
+
+    &:nth-child(4):after {
       left: -12px;
       border-radius: 100% 0 0 100% / 50% 0 0 50%;
       display: block;
+    }
+  }
+
+  @include respond-to($lg) {
+    &__item {
+      width: 27%;
+      padding: 30px 10px;
+    }
+  }
+  @include respond-to($md) {
+    &__item {
+      width: 43%;
+      margin-bottom: 18px;
+
+      &:nth-child(n) {
+        &:before,
+        &:after {
+          display: none;
+        }
+      }
+    }
+  }
+  @include respond-to($xs) {
+    margin-bottom: 37px;
+    &__item {
+      width: 100%;
+      min-height: 126px;
+      padding: 30px 35px;
+
+      &:last-of-type {
+        margin-bottom: 0;
+      }
     }
   }
 }
