--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -5,7 +5,7 @@ body {
 
 .body_bg {
   position: relative;
-
+  z-index: 0;
   &:before {
     position: absolute;
     content: '';
@@ -13,8 +13,8 @@ body {
     linear-gradient(to top, #fbf7fd 0%, rgba(251, 247, 253, 0) 40%),
     url(../assets/img/bg-soty.png);
     background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    background-position: center 0;
+    background-size: 100%;
     left: 0;
     right: 0;
     min-height: 1005px;
