--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -14,7 +14,7 @@ body {
     url(../assets/img/bg-soty.png);
     background-repeat: no-repeat;
     background-position: center 0;
-    background-size: 100%;
+    background-size: cover;
     left: 0;
     right: 0;
     min-height: 1005px;
