--- a/src/scss/components/_block-more-info.scss
+++ b/src/scss/components/_block-more-info.scss
@@ -2,6 +2,7 @@
 
   margin: 0 auto;
   max-width: 1043px;
+  width: 100%;
   padding-top: 55px;
   padding-bottom: 73px;
   border-top: 1px solid rgba(0, 136, 236, 0.1);;
