--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -20,6 +20,7 @@ $xs: '(max-width: 580px)';
 $sm: '(max-width: 767px)';
 $md: '(max-width: 991px)';
 $lg: '(max-width: 1180px)';
+$screen-md: '(max-width: 1350px)';
 $xl:'(max-width: 1480px)';
 
 
