--- a/src/scss/components/_card-post.scss
+++ b/src/scss/components/_card-post.scss
@@ -56,6 +56,9 @@
     .post-list__item {
       width: 100%;
     }
+    .card-post__date {
+      font-size: 13px;
+    }
     .card-post__thumb {
       min-height: 193px;
     }
