--- a/src/scss/pages/blog.scss
+++ b/src/scss/pages/blog.scss
@@ -24,6 +24,12 @@
 .page-count{
   font-size: 12px;
   color: #999CA0;
+  @include respond-to($sm) {
+    font-size: 18px;
+  }
+  @media screen and (max-width:340px){
+    font-size: 14px;
+  }
   .dark-text{
     font-weight: 700;
     color: $black-blue;
