--- a/src/scss/components/_card-post.scss
+++ b/src/scss/components/_card-post.scss
@@ -26,6 +26,7 @@
   }
 
   @include respond-to($sm) {
+    justify-content: center;
     padding-bottom: 50px;
 
     .card-post__author {
@@ -52,9 +53,6 @@
   }
 
   @include respond-to($xs) {
-    .post-list {
-      justify-content: center;
-    }
     .post-list__item {
       width: 100%;
     }
@@ -70,6 +68,7 @@
     .card-post__link {
       font-size: 16px;
       padding-left: 0;
+
       &:before {
         display: none;
       }
@@ -85,6 +84,7 @@
     }
     .card-post__author {
       display: flex;
+
       .heading {
         font-size: 18px;
       }
@@ -176,6 +176,7 @@
     font-size: 16px;
     color: #0088EC;
     padding-left: 32px;
+    white-space: nowrap;
 
     &:before {
       position: absolute;
