--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -86,5 +86,9 @@
     display: flex;
     min-width: 18px;
   }
+  @include respond-to($xxs) {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
