--- a/src/scss/layout/sections/section-related-post.scss
+++ b/src/scss/layout/sections/section-related-post.scss
@@ -4,6 +4,11 @@
     padding-bottom: 20px;
     margin-bottom: 14px;
   }
+  @include respond-to($xs) {
+    .section__header {
+      margin-bottom: 31px;
+    }
+  }
 }
 
 .related-post {
@@ -28,4 +33,5 @@
       padding-bottom: 15px;
     }
   }
+
 }
