--- a/src/scss/pages/single-article.scss
+++ b/src/scss/pages/single-article.scss
@@ -12,6 +12,10 @@
     @include respond-to($sm) {
       padding-left: 0;
     }
+
+  }
+  @include respond-to($xs) {
+    padding-bottom: 0;
   }
 }
 
@@ -59,6 +63,7 @@
       top: 50%;
       transform: translate(-50%, -50%);
       max-width: 100%;
+      width: 100%;
       height: 100%;
       object-fit: cover;
     }
@@ -71,5 +76,25 @@
   .card-post__avatar {
     width: 60px;
     height: 60px;
+  }
+
+  @include respond-to($sm) {
+    &__thumb {
+      padding-top: 0;
+      margin-bottom: 46px;
+      img {
+        position: relative;
+        transform: none;
+        vertical-align: middle;
+        left: 0;
+        top: 0;
+      }
+    }
+    &__header {
+      margin-bottom: 31px;
+    }
+    .card-post__author{
+      padding-top: 10px;
+    }
   }
 }
