--- a/src/scss/layout/sections/section-slider.scss
+++ b/src/scss/layout/sections/section-slider.scss
@@ -1,7 +1,8 @@
 .section-slider {
   position: relative;
-  min-height: 852px;
   background-image: linear-gradient(177.86deg, #F8FBFF 35.61%, #EEEEEE 98.2%);
+  padding-top: 140px;
+  padding-bottom: 78px;
 
   &:before {
     position: absolute;
@@ -21,7 +22,6 @@
   .wrapper-gif {
     width: 68%;
     margin-left: auto;
-
     position: absolute;
     top: 0;
     bottom: 0;
@@ -42,8 +42,12 @@
 
   }
 
-  .about-urolesan {
+  .swiper-slide.swiper-slide-active {
+    opacity: 1;
+  }
 
+  .about-urolesan {
+    padding-bottom: 100px;
   }
 
   .slide-about {
@@ -53,6 +57,7 @@
     align-items: center;
     height: auto;
     padding-left: 150px;
+    opacity: .5;
 
     &__content {
       width: 50%;
@@ -92,27 +97,70 @@
     .slide-about__heading {
       font-size: 50px;
     }
+    .wrapper-slider {
+      min-height: 744px;
+    }
   }
   @include respond-to($xl) {
     .counter-slide {
       font-size: 82px;
-    }
-    .slide-about__img {
-
     }
     .slide-about {
       padding-left: 130px;
     }
   }
   @include respond-to($lg) {
-    .wrapper-slider{
-      min-height: 615px;
+    .wrapper-slider {
+      min-height: 500px;
+    }
+    .slide-about {
+      padding-left: 100px;
+
+      .counter-slide {
+        font-size: 70px;
+      }
     }
     .slide-about__img {
       width: 40%;
     }
-    .slide-about__heading{
+    .slide-about__heading {
       font-size: 38px;
+    }
+  }
+  @include respond-to($md) {
+    padding-top: 0;
+    &:before {
+      display: none;
+    }
+    .slide-about {
+      padding-left: 0;
+
+      .counter-slide {
+        line-height: .8;
+        top: 0;
+        font-size: 56px;
+      }
+    }
+    .slide-about__content {
+      padding-top: 55px;
+      padding-bottom: 20px;
+    }
+  }
+  @include respond-to($sm) {
+    .slide-about__img,
+    .wrapper-gif {
+      display: none;
+    }
+    .wrapper-slider {
+      min-height: 0;
+      height: auto;
+    }
+    .about-urolesan {
+      padding-bottom: 41px;
+    }
+    .slide-about__heading {
+      font-size: 36px;
+      margin-bottom: 20px;
     }
   }
 }
