add resp popup, hover members

--- a/src/scss/components/_block-more-info.scss
+++ b/src/scss/components/_block-more-info.scss
@@ -1,5 +1,5 @@
 .block-more-info{
-
+  display: none;
   margin: 0 auto;
   max-width: 1043px;
   width: 100%;
@@ -42,7 +42,5 @@
   }
 }
 
-.hide-info{
-  //display: none;
-}
+
 
