--- a/src/scss/components/_popup.scss
+++ b/src/scss/components/_popup.scss
@@ -1,11 +1,31 @@
 .popup {
+  position: fixed;
+  display: none;
   background: #ffffff;
   border-radius: 20px;
   padding: 54px 90px;
   max-width: 793px;
-  width: 100%;
+  width: 90%;
   height: 549px;
-  overflow-y: auto;
+
+  z-index: 1000;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  .modal-close {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    background-image: url(../assets/img/svg/close.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    right: 30px;
+    top: 30px;
+    border: none;
+    background-color: transparent;
+  }
 
   &__title {
     max-width: 330px;
@@ -16,6 +36,8 @@
   &__content {
     max-width: 576px;
     width: 100%;
+
+    overflow-y: auto;
   }
 
   &__text {
@@ -56,5 +78,33 @@
         }
       }
     }
+  }
+
+  @include respond-to($sm) {
+    padding-left: 30px;
+    padding-right: 30px;
+    height: auto;
+    &__content {
+      height: 350px;
+    }
+    &__footer {
+      flex-direction: column;
+      align-items: flex-start;
+      width: max-content;
+      margin: 0 auto;
+
+      .btn {
+        margin: 0 0 20px;
+        padding: 20px 20px 21px;
+      }
+    }
+    &__text {
+      font-size: 16px;
+      min-height: 165px;
+    }
+  }
+  @include respond-to($xxs) {
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
