--- a/src/scss/components/_spoiler.scss
+++ b/src/scss/components/_spoiler.scss
@@ -1,4 +1,4 @@
-.block-more-info{
+.block-more-info {
   display: none;
   margin: 0 auto;
   max-width: 1043px;
@@ -10,9 +10,10 @@
   color: #000000;
   font-weight: 700;
 
-  p{
+  p {
     margin-bottom: 23px;
   }
+
   ul {
     padding-left: 14px;
 
@@ -21,24 +22,34 @@
       padding-left: 20px;
       line-height: 1.13;
       margin-bottom: 5px;
-      &:before{
+
+      &:before {
         position: absolute;
         content: '';
         width: 8px;
         height: 8px;
         border-radius: 50%;
-        background-color:#000000;
+        background-color: #000000;
         left: 0;
         top: 14px;
       }
     }
   }
-  &_white{
+
+  &_white {
     color: #ffffff;
     border-color: #ffffff;
-    ul li:before{
+
+    ul li:before {
       background-color: #ffffff;
     }
+  }
+}
+
+.spoiler {
+  .show-more {
+    display: block;
+    margin: 0 auto;
   }
 }
 
