--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,7 +11,7 @@
 @import 'components/form';
 @import 'components/pagination';
 @import 'components/widget-share';
-@import 'components/block-more-info';
+@import 'components/spoiler';
 @import 'components/card-post';
 @import 'components/card-drug';
 @import 'components/types-cystitis';
